--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>NANCY GUPTA</h1>
-        <img src="D:\Desktop\Nancy\Nancy\College Diaries\Second Year\nancy.jpg" width="300" height="400">
+        <img src="nancy.jpg" width="300" height="400">
         <p>Welcome to my personal webpage!!</p>
     </header>
     
