--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </section>
 
     <footer>
-        <p>&copy; 2024 Your Name. All Rights Reserved.</p>
+        <p>&copy; 2024 Nancy Gupta. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
