--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </li>
         <li>
             <a href="https://foodweb-s3jl.vercel.app/" target="_blank">Basic Food WebPage</a> 
-            This is the very first webpage I created during the start of learning HTML and CSS.
+            This is the very first webpage I created while beginning my journey in HTML and CSS.
             <br><small><strong>Technologies:</strong>HTML and CSS</small>
         </li>
 
